--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <title>Conferencias de Panamá</title>
 </head>
 
-<body class="font-OpenSans w-full">
+<body class="font-OpenSans m-0 p-0">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
