--- a/index.html
+++ b/index.html
@@ -5,15 +5,10 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="src/assets/images/logo-bahai-icon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wdth,wght@0,75..100,300..800;1,75..100,300..800&display=swap"
-    rel="stylesheet">
-  <title>Conferencias de Panamá</title>
+  <title>Conferencias Bahá'ís de Panamá</title>
 </head>
 
-<body class="font-OpenSans">
+<body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
