Agregamos meta descripción para mejorar SEO del sitio de conferencias

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="src/assets/images/logo-bahai-icon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Conferencias Globales Bahá’ís en Panamá — Un espacio para fortalecer la unidad, reflexionar sobre el servicio a la comunidad y explorar principios espirituales para la transformación social. Regístrate y participa en este encuentro inspirador.">
   <title>Conferencias Bahá'ís de Panamá</title>
 </head>
 
